# rendsmoimatune

./: .gitignore  .gitmodules  .htaccess  .todo  Cargo.toml  README.md  about-us.php  accept-merge.php  deconnexion.php  findGetText.sh  gradient.txt  identification.php  index.php  mergeUsers.php  messages.mo  new-account-invitation.php  new-account.php  password-recovery.php  register.php  sass.py  sign-in.php  sign-out.php  uglify.py  vue.py  waf  wscript
UML/: Rendsmoimatune.zargo
ajax/: account-participants.php  autocomplete-user.php  getAuthenticationSalt.php
api/: account.php  accounts.php  auth.php  expenditure.php  oauth_access_token.php  oauth_authorization.php  oauth_request_token.php  oauth_token.php  register-client.php  register-consumer.php  repayment.php  rmmt.xsd  sign_request.php
api/example/: account.xml  error.xml  expenditure.xml  repayment.xml  user.xml
authentication/: facebook.php
client/: .eslintrc  .eslintrc.js  Cargo.toml  README.md  Trunk.toml  config.js  gulpfile.js  index.html  package.json  wscript
client/config/: index.js
client/css/: _settings.scss  main.scss
client/js/: app.component.js  home.vue  main.angular.js  main.js
client/px/: LICENCES.md
client/scss/: _settings.scss  main.scss
client/src/: App.vue  account-detail.vue  account.vue  agent.rs  app.vue  ctx.rs  edit-expenditure.vue  edit-repayment.vue  expenditures.vue  landing.vue  list-expenditures.vue  list-repayments.vue  loading.vue  main.js  main.rs  repayments.vue  utils.rs
client/src/components/: account.rs  balance.rs  ctx.rs  expenditure.rs  mod.rs  repayment.rs  user.rs  utils.rs
client/src/css/: _settings.scss  main.scss
client/templates/: account-add.html  account.html  error.html  expenditures-add.html  expenditures-edit.html  expenditures-list.html  expenditures.html  home.html  index.html  repayments-edit.html  repayments-list.html
events/: cash-up.php  create-new-event.php  create-new-expenditure.php  create-new-repayment.php  delete-expenditure.php  edit-expenditure.php  event-admin.php  event.php  expenditures-list.php  index.php  repayments-list.php
inc/: assignDefaultVar.php  init.php
inc/class/User/: User.class.php
inc/conf/: config.dist.ini  config.ini  config.ini.dist
inc/engine/Bdf/: Core.class.php  Enum.class.php  ITemplatesEngine.class.php  IUser.class.php  Logger.class.php  Session.class.php  SimpleTemplatesEngine.class.php  SmartyAdapter.class.php  Utils.class.php
inc/engine/Core/: Core.class.php
inc/engine/Db/: Db.class.php  IDb.class.php  Mysql.class.php  Postgresql.class.php
inc/engine/Logger/: Logger.class.php
inc/engine/Session/: Session.class.php
inc/engine/User/: User.class.php
inc/engine/Utils/: Utils.class.php
inc/locale/: default.pot
inc/mapping/: Eu.Rmmt.Account.dcm.xml  Eu.Rmmt.Api.Client.dcm.xml  Eu.Rmmt.Api.OAuthConsumer.dcm.xml  Eu.Rmmt.Api.OAuthToken.dcm.xml  Eu.Rmmt.Beneficiary.dcm.xml  Eu.Rmmt.Event.dcm.xml  Eu.Rmmt.Expenditure.dcm.xml  Eu.Rmmt.Involved.dcm.xml  Eu.Rmmt.MergeRequest.dcm.xml  Eu.Rmmt.Payed.dcm.xml  Eu.Rmmt.Payer.dcm.xml  Eu.Rmmt.Repayment.dcm.xml  Eu.Rmmt.Tag.dcm.xml  Eu.Rmmt.User.dcm.xml
inc/templates/default/: about-us.tpl  index.tpl  mail.tpl  merge-request.tpl  password-recovery.tpl  register.tpl  reset-password.tpl  sign-in.tpl
inc/templates/xml/: account.tpl  accounts.tpl  error.tpl  expenditure.tpl  repayment.tpl  token.tpl
install/: config.php  cots.xml  downloadCots.php  index.php  pcltar.lib.php
install/sql/: backup-schema-01-01-11.sql  backup-schema-05-11-10.sql  backup-schema-09-03-11.sql  backup-schema-19-09-10.sql  btf.sql  dump-14-04-2011.sql  helper.sql  postgresql.sql  update-15-04-2011.sql  update-16-06-2011.sql  update-2011-06-01.sql  update-2011-06-08.sql  update-2011-07-18.sql  update-2011-07-19.sql  update-2011-07-28.sql  update-2011-08-08.sql  update-2012-02-27.sql  update-2012-04-10.sql  update-2013-01-03.sql  update-2013-01-24.sql  update.sql
js/: authentication.js  console-log.js
js/default/: date-picker.js  facebook-authentication.js  manage-expenditure-users.js  manage-repayment-users.js  merge-select.js  slide.js  textboxlist.js  tips.js
js/lib/fastbox/: fastbox.js
locale/: default.pot
locale/fr_FR/LC_MESSAGES/: default.mo  default.po
my-account/: index.php  manageUsers.php  mergeUsers.php  send-invitation.php
my-accounts/: accept-merge.php  account-admin.php  account.php  cash-up.php  create-new-account.php  create-new-expenditure.php  create-new-repayment.php  delete-expenditure.php  delete-repayment.php  delete.php  edit-expenditure.php  edit-repayment.php  exclude-user.php  expenditures-list.php  index.php  merge-users.php  mergeUsers.php  participants.php  rename.php  repayments-list.php  view-expenditure.php  view-repayment.php
my-parameters/: index.php  manageUsers.php  mergeUsers.php  send-invitation.php
nbproject/: project.xml
px/src/: account-presentation.psd  account-reflet-presentation.psd  balance.psd  facebook.xcf  transdmin light.psd  user-completion.xcf
rmmt/: Cargo.toml
rmmt/migrations/: import_old_db.sql
rmmt/migrations/2022-03-23-205028_init/: down.sql  up.sql
rmmt/src/: lib.rs  prelude.rs  schema.rs  tests.rs  uniqid.rs
server/: .gitignore  Cargo.toml  Rocket.toml  pylintrc  requirements.txt  rmmt.py  server.py  test_rmmt.py  test_uniqid.py  uniqid.py  wscript
server/migrations/2022-03-23-205028_init/: down.sql  up.sql
server/src/: account.rs  balance.rs  error.rs  expenditure.rs  main.rs  repayment.rs  schema.rs  uniqid.rs  user.rs
server/tests/: uniqid.py
style/default/: TextboxList.css  console.css  datepicker.css  hack.css  layout.css  meio.aucomplete.css  transdmin.css
templates/default/: error.tpl  identification.tpl  index.tpl  new-account-from-invitation.tpl  new-account.tpl  sign-in.tpl
templates/default/authentication/: basic.tpl  facebook.tpl
templates/default/events/: beneficiaries-form.tpl  cash-up.tpl  (+11 more)
test/: test.php
(+152 files in other folders)
