[package]
name = "rmmt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
rmmt = { path = "../rmmt" }
uuid = "0.6.5"
wasm-logger = "*"
log = "*"
web-sys = { version = "*", features = ["HtmlFormElement"] }
wasm-bindgen = "*"
yewtil = "0.4"
