[package]
name = "rmmt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["wasmbind"] }
gloo-net = "0.2"
itertools = "*"
log = "*"
rmmt = { path = "../rmmt" }
serde = { version = "1.0", features = ["derive"] }
uuid = "0.8.2"
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4"
wasm-logger = "*"
web-sys = { version = "*", features = ["HtmlFormElement"] }
yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"
yewtil = "0.4"
lazy_static = "*"
regex = "*"
