[package]
name = "rmmt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "*", features = ["wasmbind"] }
gloo = "0.7"
gloo-net = "0.2.6"
itertools = "*"
log = "*"
rmmt = { path = "../rmmt" }
serde = { version = "1.0", features = ["derive"] }
uuid = "1"
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4"
wasm-logger = "*"
web-sys = { version = "*", features = ["HtmlFormElement"] }
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2"
yew-router = "0.17"
wee_alloc = "*"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
