[package]
name = "rmmt"
version = "0.1.0"
edition = "2021"

[features]
db = ["diesel"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono"], optional = true }
serde = { version = "*", features = ["derive"] }
uuid = { version = "0.6.5", features = ["serde", "u128"] }
rocket = { version = "0.5.0-rc.1", optional = true }
log = "*"

[dev-dependencies]
uuid = { version = "0.6.5", features = ["serde", "v4", "v5"] }
env_logger = "*"
test-log = "*"
