[package]
name = "rmmt"
version = "0.1.0"
edition = "2021"

[features]
db = ["diesel"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono"], optional = true }
serde = { version = "*", features = ["derive"] }
uuid = { version = "^0.8.2", features = ["serde"] }
rocket = { version = "=0.5.0-rc.1", optional = true }
log = "*"
num = "^0.4"

[dev-dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
env_logger = "*"
test-log = "*"
