[package]
name = "rmmt"
version = "0.1.1"
edition = "2021"

[features]
db = ["diesel"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
diesel = { version = "^2", features = ["postgres", "uuid", "chrono"], optional = true }
serde = { version = "*", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", optional = true }
log = "*"
num = "^0.4"

[dev-dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
env_logger = "*"
test-log = "*"
