[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
rmmt = { path = "../rmmt" }
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
uuid = { version = "0.8", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
