[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
rmmt = { path = "../rmmt", features = ["db"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
uuid = { version = "0.6.5", features = ["serde", "u128"] }
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
test-log = "*"
env_logger = "*"
