[package]
name = "rmmt-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
diesel = { version = "^2", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
rmmt = { path = "../rmmt", features = ["db", "rocket"] }
# waiting for release of 5.0 of rocket
# currently waiting for support of diesel 2.0 (commit f0d678d464e776aaaf5d7d5f1d30df3422d362f9)
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json", "uuid"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["diesel_postgres_pool"] }
uuid = "1"
serde = { version = "*", features = ["derive"] }
figment = { version = "^0.10.4", features = ["env", "toml"] }
clap = { version = "*", features = ["derive"] }

[dev-dependencies]
test-log = "*"
env_logger = "*"
